[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checkpoint-sdk"
version = "0.1.1"
description = "Program-agnostic Solana IDL transaction decoder and SDK"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "apchhui" }
]
requires-python = ">=3.10"

dependencies = [
  "requests>=2.31.0",
  "solana>=0.30.0",
  "solders>=0.19.0",
  "base58>=2.1.1"
]

[project.urls]
Homepage = "https://github.com/apchhui/checkpoint-sdk"

[tool.setuptools.packages.find]
where = ["src"]
include = ["checkpoint_sdk*"]
exclude = ["tests*", "test*"]
